test/sematest/invalid/invalid_return_type.java

class Foo {
  public int f() { return true; }

  public static void main(String[] args) {
  }
}
